--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">GranCentre APP</string>
+    <!--Strings de hoteles-->
     <string name="titol1_hotel">Fonda Europa</string>
     <string name="titol2_hotel">Hotel Granollers</string>
     <string name="titol3_hotel">Hotel Iris</string>
@@ -9,9 +10,17 @@
     <string name="titol7_hotel">Hotel Ciutat</string>
     <string name="titol_hotel">Hotels</string>
     <string name="titol_rest">Restaurants</string>
+    <string name="hdesc1">Hotel amb encant a Granollers. La Fonda Europa, situada al centre históric de la ciutat, té més de 300 anys d\'história.</string>
+    <string name="hdesc2">Hotel de 3 estrelles situat a  Av Francesc Macià, 300, Granollers, Barcelona. Reservi online al millor preu</string>
+    <string name="hdesc3">Aquest modern hotel està situat al centre de la ciutat, a 3 km del Circuit de Catalunya i a 5 km del complex comercial La Roca Village</string>
+    <string name="hdesc4">Estàs buscant hotels barats a Barcelona? Ja pots deixar de buscar! B&amp;B Hotel Granollers t\'ofereix un allotjament econòmic i ben comunicat amb la ciutat costanera.</string>
+    <string name="hdesc5">Hotel que es troba al centre comercial de Granollers a 20 Km de Barcelona, a prop del Circuit de Montmeló i comunicat amb les principals vies d\'accés.</string>
+    <string name="hdesc6">Reserva al millor preu la teva habitació per dies o per hores.Es troba junt a l\'autopista E15, a les afores de la ciutat y a 20 minuts en cotxe de la ciutat de Barcelona </string>
+    <string name="hdesc7">Ubicat en una propietat arbrada davant d\'una rotonda, es troba a 13 minuts a peu de l\'estació de tren Granollers Centre i a 15 minuts a peu de centre històric de la ciutat.</string>
     <string name="telf">Trucar</string>
     <string name="web">Web</string>
     <string name="rating">Votar</string>
+    <!--Strings de restaurantes-->
     <string name="desc1">Establiment amb una ample oferta culinaria europea on predominen antigues tradicions</string>
     <string name="desc2">Restaurant amb una gran oferta culinaria de pizzes, a més de carnes i verdures de temporada.</string>
     <string name="desc3">Establiment que proporciona menjar rapid com són hamburgueses, patates, pollastre arrebosat,...</string>
@@ -38,6 +47,7 @@
     <string name="titol11_rest">Pitapes</string>
     <string name="titol12_rest">Foster\'s Hollywood</string>
     <string name="titol13_rest">Telepizza</string>
+    <!-- Array elementos de los spinner-->
     <string-array name="spinner_array">
         <item></item>
         <item>&#9734;&#9734;</item>
