--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="titol7_hotel">Hotel Ciutat</string>
     <string name="titol_hotel">Hotels</string>
     <string name="titol_rest">Restaurants</string>
+    <string name="titol_park">Parkings</string>
     <string name="hdesc1">Hotel amb encant a Granollers. La Fonda Europa, situada al centre históric de la ciutat, té més de 300 anys d\'história.</string>
     <string name="hdesc2">Hotel de 3 estrelles situat a  Av Francesc Macià, 300, Granollers, Barcelona. Reservi online al millor preu</string>
     <string name="hdesc3">Aquest modern hotel està situat al centre de la ciutat, a 3 km del Circuit de Catalunya i a 5 km del complex comercial La Roca Village</string>
@@ -47,6 +48,10 @@
     <string name="titol11_rest">Pitapes</string>
     <string name="titol12_rest">Foster\'s Hollywood</string>
     <string name="titol13_rest">Telepizza</string>
+    <!-- Strings parkings -->
+    <string name="titol1_park">Parquing Can Trullás</string>
+    <string name="titol2_park">Parquing Public Teatre Auditori</string>
+    <string name="titol3_park">Parquing El Sot</string>
     <!-- Array elementos de los spinner-->
     <string-array name="spinner_array">
         <item>All</item>
@@ -60,4 +65,8 @@
         <item>Japonés</item>
         <item>Menjar ràpid</item>
     </string-array>
+    <string name="nombre">Nombre : </string>
+    <string name="apellido">Apellidos : </string>
+    <string name="edad">Edad : </string>
+    <string name="sueldo">Sueldo : </string>
 </resources>
